@@ -1,3 +1,4 @@
+* Use number of verbose flag as log level
 * Add coroutine concurrency option
 * Add increasing delay on database operational error retry
 * Allows to lock records for update
